k8s/flask-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-server-service
spec:
  selector:
    app: flask-server
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
