k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: html-css-js-service
spec:
  selector:
    app: html-css-js-server
  ports:
    - protocol: TCP
      port: 80         # Service port
      targetPort: 80   # Container port
      nodePort:  30002   # External port on the node (ensure this port is allowed)
  type: NodePort
