k8s/node-service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-backend-service
spec:
  selector:
    app: node-backend
  ports:
  - protocol: TCP
    port: 3002
    targetPort: 3002
